[package]
name = "i2ray"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1"
rust-crypto = "0.2"
rand = "0.8.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# [dev-dependencies]
# env_logger = "0.9.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"